<?xml version="1.0" encoding="utf-8"?>
<!--
/*
**
** Copyright 2008, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Title for Latin keyboard  -->
    <string name="app_name">Cymraeg (Literatim)</string>
    <string name="ime_name">Cymraeg (Literatim)</string>

    <!-- Symbols that are commonly considered word separators in this language -->
    <string name="word_separators">\u0020\'.,;:!?\n()[]*&amp;@{}/&lt;&gt;_+=|&quot;</string>
    <string name="sentence_separators">.,!?)</string>
    
    <!-- Labels on soft keys -->
    <string name="label_go_key">Mynd</string>
    <string name="label_next_key">Nesaf</string>
    <string name="label_send_key">Anfon</string>

    <!-- ConfigScreen labels -->
    <string name="label_setup">Ble mae’r Gymraeg?</string>
    <string name="text_enable">1. Troi ymlaen</string>
    <string name="label_enable">Ticio “Cymraeg”</string>
    <string name="label_enable_done">Wedi ticio “Cymraeg”</string>
    <string name="text_select">2. Dewis</string>
    <string name="label_select">Dewis “Cymraeg”</string>
    <string name="label_select_done">Wedi dewis “Cymraeg”</string>
    <string name="text_success">Ar waith!</string>
</resources>
